[package]
name = "patchwork-cli"
version = "0.1.0"
edition = "2021"
description = "AST-native sed — find, replace, delete, and insert code by structure, not regex"
repository = "https://github.com/ThatXliner/patchwork"
license = "MIT OR Apache-2.0"
keywords = ["tree-sitter", "ast", "refactoring", "code-search", "structural"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.26.8"
tree-sitter-java = "0.23.5"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
