[package]
name = "patchwork-cli"
version = "0.2.0"
edition = "2021"
description = "AST-native sed — find, replace, delete, and insert code by structure, not regex"
repository = "https://github.com/ThatXliner/patchwork"
license = "MIT OR Apache-2.0"
keywords = ["tree-sitter", "ast", "refactoring", "code-search", "structural"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.26.8"
tree-sitter-java = "0.23.5"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.2"
tree-sitter-go = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-php = "0.24.2"
tree-sitter-bash = "0.25.1"
